--- a/gogreen/templates/index.html
+++ b/gogreen/templates/index.html
@@ -36,7 +36,7 @@
     />
     <!-- font css -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap"
+      href='{% static "https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" %}'
       rel="stylesheet"
     />
     <!-- Scrollbar Custom CSS -->
@@ -48,7 +48,7 @@
     <!-- Tweaks for older IEs-->
     <link
       rel="stylesheet"
-      href='{% static "https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" %}'
+      href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" 
     />
   </head>
   <body>
@@ -392,7 +392,7 @@
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="about_taital">What syas customers</h1>
+                  <h1 class="about_taital">What says customers</h1>
                 </div>
               </div>
               <div class="client_section_2">
@@ -417,7 +417,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="about_taital">What syas customers</h1>
+                  <h1 class="about_taital">What says customers</h1>
                 </div>
               </div>
               <div class="client_section_2">
@@ -442,7 +442,7 @@
             <div class="carousel-item">
               <div class="row">
                 <div class="col-md-12">
-                  <h1 class="about_taital">What syas customers</h1>
+                  <h1 class="about_taital">What says customers</h1>
                 </div>
               </div>
               <div class="client_section_2">
@@ -583,8 +583,6 @@
           <div class="col-sm-12">
             <p class="copyright_text">
               2020 All Rights Reserved. Design by
-              <a href="https://html.design">Free Html Templates</a> Distribution
-              by <a href="https://themewagon.com">ThemeWagon</a>
             </p>
           </div>
         </div>
